--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,12 @@
             "email": "rocco@hnh.digital"
         }
     ],
+    "repositories": [
+        {
+            "url": "git@github.com:hnhdigital-os/laravel-assets.git",
+            "type": "git"
+        }
+    ],
     "require": {
         "php": ">=7.0.0",
         "roumen/asset": "dev-master",
