--- a/composer.json
+++ b/composer.json
@@ -11,20 +11,22 @@
     ],
     "repositories": [
         {
-            "url": "git@github.com:hnhdigital-os/laravel-assets.git",
+            "url": "https://github.com/hnhdigital-os/laravel-assets.git",
             "type": "git"
         }
     ],
     "require": {
         "php": ">=7.0.0",
-        "roumen/asset": "dev-master",
-        "hnhdigital-os/laravel-frontend-assets": "^1.0"
+        "roumen/asset": "v2.5.6"
     },
     "require-dev": {
         "phpunit/phpunit": "5.*",
         "illuminate/database": "4.*|5.*",
         "symfony/process": "~2.3",
         "codeclimate/php-test-reporter": "dev-master"
+    },
+    "suggest": {
+        "hnhdigital-os/laravel-frontend-assets": "H&H|Digital standard assets"
     },
     "autoload": {
         "files": [
