--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,9 @@
             "email": "rocco@hnh.digital"
         }
     ],
-    "repositories": [
-        {
-            "url": "https://github.com/hnhdigital-os/laravel-assets.git",
-            "type": "git"
-        }
-    ],
     "require": {
         "php": ">=7.0.0",
-        "roumen/asset": "v2.5.6"
+        "hnhdigital-os/laravel-assets": "v2.5.6"
     },
     "require-dev": {
         "phpunit/phpunit": "5.*",
