--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
         }
     ],
     "require": {
-        "php": ">=7.0.0",
-        "hnhdigital-os/laravel-assets": "v2.5.6"
+        "php": ">=7.1.3"
     },
     "require-dev": {
         "phpunit/phpunit": "5.*",
