--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,12 @@
         }
     ],
     "require": {
-        "php": ">=7.1.3"
+        "php": "^7.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "5.*",
-        "illuminate/database": "4.*|5.*",
-        "symfony/process": "~2.3",
-        "codeclimate/php-test-reporter": "dev-master"
+        "phpunit/phpunit": "^8.3",
+        "phpmd/phpmd" : "~2.0",
+        "squizlabs/php_codesniffer" : "~3.0"
     },
     "suggest": {
         "hnhdigital-os/laravel-frontend-asset-pack": "H&H Digital asset pack"
