--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,10 @@
         }
     ],
     "require": {
-        "php": "^7.3"
+        "php": "^8.0.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.3",
-        "phpmd/phpmd" : "~2.0",
-        "squizlabs/php_codesniffer" : "~3.0"
+        "phpunit/phpunit": "^8.0"
     },
     "suggest": {
         "hnhdigital-os/laravel-frontend-asset-pack": "H&H Digital asset pack"
@@ -34,7 +32,7 @@
         "process-timeout": 2000,
         "sort-packages": true,
         "platform": {
-            "php": "7.3.0"
+            "php": "8.0.2"
         }
     },
     "extra": {
