--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
         }
     ],
     "require": {
-        "php": "^8.0.2"
+        "php": "^8.0",
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0"
+        "phpunit/phpunit": "^9.3"
     },
     "suggest": {
         "hnhdigital-os/laravel-frontend-asset-pack": "H&H Digital asset pack"
@@ -30,10 +30,7 @@
         "optimize-autoloader": true,
         "preferred-install": "dist",
         "process-timeout": 2000,
-        "sort-packages": true,
-        "platform": {
-            "php": "8.0.2"
-        }
+        "sort-packages": true
     },
     "extra": {
         "laravel": {
